Updated to final system structure.
git-svn-id: svn+ssh://svn.cern.ch/reps/dirac/LHCbDIRAC/trunk@18713 4525493e-7705-40b1-a816-d608a930855b

--- a/LHCbDIRAC/versions.cfg
+++ b/LHCbDIRAC/versions.cfg
@@ -3,10 +3,16 @@ Versions
   test
   {
     BookkeepingSystem = trunk
+    ConfigurationSystem = trunk
+    Core = trunk
     DataManagementSystem = trunk
-    TransformationSystem = trunk
-    WorkloadManagementSystem = trunk
+    Interfaces = trunk
     ProductionManagementSystem = trunk
+    ResourceStatusSystem = trunk
+    SAMSystem = trunk
+    TransformationSystem = trunk
+    Workflow = trunk
+    WorkloadManagementSystem = trunk
   }
 }
 packageExtraFiles = __init__.py, versions.cfg 
