--- a/LHCbDIRAC/versions.cfg
+++ b/LHCbDIRAC/versions.cfg
@@ -1,3 +1,4 @@
+# $HeadURL$
 Versions
 {
   test
@@ -16,3 +17,4 @@ Versions
   }
 }
 packageExtraFiles = __init__.py, versions.cfg 
+fileVersion = $Id
