Added v5r0p0-pre2-upcoming to get the new subsystems versions for the next prerelease
git-svn-id: svn+ssh://svn.cern.ch/reps/dirac/LHCbDIRAC/trunk@19953 4525493e-7705-40b1-a816-d608a930855b

--- a/LHCbDIRAC/versions.cfg
+++ b/LHCbDIRAC/versions.cfg
@@ -1,6 +1,20 @@
 # $HeadURL$
 Versions
 {
+  v5r0p0-pre2-upcoming
+  {
+    BookkeepingSystem = bk_2010011201
+    ConfigurationSystem = cs_2010011201
+    Core = co_2010011201
+    DataManagementSystem = dm_2010011201
+    Interfaces = if_2010011201
+    ProductionManagementSystem = pm_2010011201
+    ResourceStatusSystem = rs_2010011201
+    SAMSystem = sa_2010011201
+    TransformationSystem = ts_2010011201
+    Workflow = wo_2010011201
+    WorkloadManagementSystem = wm_2010011201
+  }
   v5r0p0-pre1
   {
     BookkeepingSystem = bk_2010011201
