include TransformationSystem and ProductionManagementSystem tags and release notes.
git-svn-id: svn+ssh://svn.cern.ch/reps/dirac/LHCbDIRAC/trunk@19957 4525493e-7705-40b1-a816-d608a930855b

--- a/LHCbDIRAC/versions.cfg
+++ b/LHCbDIRAC/versions.cfg
@@ -8,10 +8,12 @@ Versions
     Core = co_2010011201
     DataManagementSystem = dm_2010011201
     Interfaces = if_2010011201
-    ProductionManagementSystem = pm_2010011201
+    # CHANGE: Removed generic code to TransformationSystem(s)
+    ProductionManagementSystem = pm_2010011901
     ResourceStatusSystem = rs_2010011201
     SAMSystem = sa_2010011201
-    TransformationSystem = ts_2010011201
+    # NEW: Contains only code which references the LHCbDIRAC/BookkeepingSystem
+    TransformationSystem = tr_2010011901
     Workflow = wo_2010011201
     WorkloadManagementSystem = wm_2010011201
   }
