--- a/LHCbDIRAC/versions.cfg
+++ b/LHCbDIRAC/versions.cfg
@@ -1,21 +1,32 @@
 # $HeadURL$
 Versions
 {
-  v5r0p0-pre2-upcoming
+  v5r0p0-pre2
   {
-    BookkeepingSystem = bk_2010011201
-    ConfigurationSystem = cs_2010011201
-    Core = co_2010011201
-    DataManagementSystem = dm_2010011201
-    Interfaces = if_2010011201
+    # NEW: use LHCbDiracPolicy in cmt/requirements
+    BookkeepingSystem = bk_2010012001
+    # NEW: use LHCbDiracPolicy in cmt/requirements
+    ConfigurationSystem = cs_2010012001
+    # NEW: use LHCbDiracPolicy in cmt/requirements
+    Core = co_2010012001
+    # NEW: use LHCbDiracPolicy in cmt/requirements
+    DataManagementSystem = dm_2010012001
+    # NEW: use LHCbDiracPolicy in cmt/requirements
+    Interfaces = if_2010012001
     # CHANGE: Removed generic code to TransformationSystem(s)
-    ProductionManagementSystem = pm_2010011901
-    ResourceStatusSystem = rs_2010011201
-    SAMSystem = sa_2010011201
+    # NEW: use LHCbDiracPolicy in cmt/requirements
+    ProductionManagementSystem = pm_2010012001
+    # NEW: use LHCbDiracPolicy in cmt/requirements
+    ResourceStatusSystem = rs_2010012001
+    # NEW: use LHCbDiracPolicy in cmt/requirements
+    SAMSystem = sa_2010012001
     # NEW: Contains only code which references the LHCbDIRAC/BookkeepingSystem
-    TransformationSystem = tr_2010011901
-    Workflow = wo_2010011201
-    WorkloadManagementSystem = wm_2010011201
+    # NEW: use LHCbDiracPolicy in cmt/requirements
+    TransformationSystem = tr_2010012001
+    # NEW: use LHCbDiracPolicy in cmt/requirements
+    Workflow = wo_2010012001
+    # NEW: use LHCbDiracPolicy in cmt/requirements
+    WorkloadManagementSystem = wm_2010012001
   }
   v5r0p0-pre1
   {
