cmt was missing in the list of extra packagefiles
git-svn-id: svn+ssh://svn.cern.ch/reps/dirac/LHCbDIRAC/trunk@20127 4525493e-7705-40b1-a816-d608a930855b

--- a/LHCbDIRAC/versions.cfg
+++ b/LHCbDIRAC/versions.cfg
@@ -57,5 +57,5 @@ Versions
     WorkloadManagementSystem = trunk
   }
 }
-packageExtraFiles = __init__.py, versions.cfg 
+packageExtraFiles = __init__.py, versions.cfg, cmt
 fileVersion = $Id
