--- a/LHCbDIRAC/versions.cfg
+++ b/LHCbDIRAC/versions.cfg
@@ -1,6 +1,33 @@
 # $HeadURL$
 Versions
 {
+  v5r0p0-pre3
+  {
+    # NEW: use LHCbDiracPolicy in cmt/requirements
+    BookkeepingSystem = bk_2010012001
+    # NEW: use LHCbDiracPolicy in cmt/requirements
+    ConfigurationSystem = cs_2010012001
+    # NEW: use LHCbDiracPolicy in cmt/requirements
+    Core = co_2010012001
+    # NEW: use LHCbDiracPolicy in cmt/requirements
+    DataManagementSystem = dm_2010012001
+    # NEW: use LHCbDiracPolicy in cmt/requirements
+    Interfaces = if_2010012001
+    # CHANGE: Removed generic code to TransformationSystem(s)
+    # NEW: use LHCbDiracPolicy in cmt/requirements
+    ProductionManagementSystem = pm_2010012001
+    # NEW: use LHCbDiracPolicy in cmt/requirements
+    ResourceStatusSystem = rs_2010012001
+    # NEW: use LHCbDiracPolicy in cmt/requirements
+    SAMSystem = sa_2010012001
+    # NEW: Contains only code which references the LHCbDIRAC/BookkeepingSystem
+    # NEW: use LHCbDiracPolicy in cmt/requirements
+    TransformationSystem = tr_2010012001
+    # NEW: use LHCbDiracPolicy in cmt/requirements
+    Workflow = wo_2010012001
+    # NEW: use LHCbDiracPolicy in cmt/requirements
+    WorkloadManagementSystem = wm_2010012001
+  }
   v5r0p0-pre2
   {
     # NEW: use LHCbDiracPolicy in cmt/requirements
