Added ProductionManagement tag for the next release.
git-svn-id: svn+ssh://svn.cern.ch/reps/dirac/LHCbDIRAC/trunk@20293 4525493e-7705-40b1-a816-d608a930855b

--- a/LHCbDIRAC/versions.cfg
+++ b/LHCbDIRAC/versions.cfg
@@ -1,6 +1,11 @@
 # $HeadURL$
 Versions
 {
+  NextRelease
+  {
+    # NEW: Agent for submit/monitor replication transformations
+    ProductionManagementSystem = pm_2010012201 
+  }
   # NEW: use LHCbDiracPolicy in cmt/requirements
   v5r0p0-pre5
   {
