--- a/LHCbDIRAC/versions.cfg
+++ b/LHCbDIRAC/versions.cfg
@@ -1,10 +1,29 @@
 # $HeadURL$
 Versions
 {
-  NextRelease
+    NextRelease
   {
+    
+  }
+  
+  # NEW: use LHCbDiracPolicy in cmt/requirements
+  v5r0p0-pre6
+  {
+    # CHANGE: Import Bookkeeping modules consistently from LHCbDIRAC package
+    BookkeepingSystem = bk_2010012201
+    ConfigurationSystem = cs_2010012001
+    Core = co_2010012001
+    DataManagementSystem = dm_2010012001
+    Interfaces = if_2010012001
+    # CHANGE: Removed generic code to TransformationSystem(s)
     # NEW: Agent for submit/monitor replication transformations
     ProductionManagementSystem = pm_2010012201 
+    ResourceStatusSystem = rs_2010012001
+    SAMSystem = sa_2010012001
+    # NEW: Contains only code which references the LHCbDIRAC/BookkeepingSystem
+    TransformationSystem = tr_2010012001
+    Workflow = wo_2010012001
+    WorkloadManagementSystem = wm_2010012001
   }
   # NEW: use LHCbDiracPolicy in cmt/requirements
   v5r0p0-pre5
