Added ProductionManagement tag for the next release.
git-svn-id: svn+ssh://svn.cern.ch/reps/dirac/LHCbDIRAC/trunk@20336 4525493e-7705-40b1-a816-d608a930855b

--- a/LHCbDIRAC/versions.cfg
+++ b/LHCbDIRAC/versions.cfg
@@ -3,7 +3,8 @@ Versions
 {
     NextRelease
   {
-    
+    # BUGFIX: consider all production type agents
+    ProductionManagementSystem = pm_2010012202
   }
   
   # NEW: use LHCbDiracPolicy in cmt/requirements
