--- a/LHCbDIRAC/versions.cfg
+++ b/LHCbDIRAC/versions.cfg
@@ -4,64 +4,65 @@ Versions
 
   NextRelease
   {
-  
+    SAMSystem = sa_2010020501
+
   }
-  
+
   # NEW: use LHCbDiracPolicy in cmt/requirements
   # BUGFIX: many typos fixed after the code checker pass (R.Graciani)
   v5r0p0-pre9
   {
     # CHANGE: Import Bookkeeping modules consistently from LHCbDIRAC package
     BookkeepingSystem = bk_2010012201
-    
+
     ConfigurationSystem = cs_2010012001
-    
+
     # CHANGE: updated install_xxx.sh scripts
     Core = co_2010012501
     DataManagementSystem = dm_2010012001
     Interfaces = if_2010012501
-    
+
     # CHANGE: Removed generic code to TransformationSystem(s)
     # NEW: Agent for submit/monitor replication transformations
     # BUGFIX: consider all production type agents
     ProductionManagementSystem = pm_2010012501
-    
+
     ResourceStatusSystem = rs_2010012001
     SAMSystem = sa_2010012001
-    
+
     # NEW: Contains only code which references the LHCbDIRAC/BookkeepingSystem
     TransformationSystem = tr_2010012001
-    
+
     Workflow = wo_2010012001
     WorkloadManagementSystem = wm_2010012001
   }
 
   # NEW: use LHCbDiracPolicy in cmt/requirements
   # BUGFIX: many typos fixed after the code checker pass (R.Graciani)
-  
+
   v5r0p0-pre8
   {
     # CHANGE: Import Bookkeeping modules consistently from LHCbDIRAC package
     BookkeepingSystem = bk_2010012201
-    
+
     ConfigurationSystem = cs_2010012001
-    
+
     # CHANGE: updated install_xxx.sh scripts
     Core = co_2010012501
     DataManagementSystem = dm_2010012001
     Interfaces = if_2010012501
-    
+
     # CHANGE: Removed generic code to TransformationSystem(s)
     # NEW: Agent for submit/monitor replication transformations
     # BUGFIX: consider all production type agents
     ProductionManagementSystem = pm_2010012501
-    
+
     ResourceStatusSystem = rs_2010012001
     SAMSystem = sa_2010012001
-    
+
     # NEW: Contains only code which references the LHCbDIRAC/BookkeepingSystem
     TransformationSystem = tr_2010012001
-    
+
     Workflow = wo_2010012001
     WorkloadManagementSystem = wm_2010012001
   }
@@ -86,7 +87,7 @@ Versions
     Workflow = wo_2010012001
     WorkloadManagementSystem = wm_2010012001
   }
-  
+
   # NEW: use LHCbDiracPolicy in cmt/requirements
   v5r0p0-pre6
   {
@@ -98,7 +99,7 @@ Versions
     Interfaces = if_2010012001
     # CHANGE: Removed generic code to TransformationSystem(s)
     # NEW: Agent for submit/monitor replication transformations
-    ProductionManagementSystem = pm_2010012201 
+    ProductionManagementSystem = pm_2010012201
     ResourceStatusSystem = rs_2010012001
     SAMSystem = sa_2010012001
     # NEW: Contains only code which references the LHCbDIRAC/BookkeepingSystem
