--- a/LHCbDIRAC/versions.cfg
+++ b/LHCbDIRAC/versions.cfg
@@ -4,8 +4,37 @@ Versions
 
   NextRelease
   {
+
+  }
+  
+  # NEW: use LHCbDiracPolicy in cmt/requirements
+  # BUGFIX: many typos fixed after the code checker pass (R.Graciani)
+  v5r0p0-pre10
+  {
+    # CHANGE: Import Bookkeeping modules consistently from LHCbDIRAC package
+    BookkeepingSystem = bk_2010020701
+
+    # CHANGE: Use rearranged utilities
+    ConfigurationSystem = cs_2010020701
+
+    # CHANGE: updated install_xxx.sh scripts
+    Core = co_2010012501
+    DataManagementSystem = dm_2010020701
+    Interfaces = if_2010012501
+
+    # CHANGE: Removed generic code to TransformationSystem(s)
+    # NEW: Agent for submit/monitor replication transformations
+    # BUGFIX: consider all production type agents
+    ProductionManagementSystem = pm_2010020701
+
+    ResourceStatusSystem = rs_2010020701
     SAMSystem = sa_2010020501
 
+    # NEW: Contains only code which references the LHCbDIRAC/BookkeepingSystem
+    TransformationSystem = tr_2010020701
+
+    Workflow = wo_2010020701
+    WorkloadManagementSystem = wm_2010012001
   }
 
   # NEW: use LHCbDiracPolicy in cmt/requirements
