new bkk release
git-svn-id: svn+ssh://svn.cern.ch/reps/dirac/LHCbDIRAC/trunk@21242 4525493e-7705-40b1-a816-d608a930855b

--- a/LHCbDIRAC/versions.cfg
+++ b/LHCbDIRAC/versions.cfg
@@ -4,7 +4,8 @@ Versions
 
   NextRelease
   {
-
+  	# EventInputStat correction and data taking description name correction
+  	BookkeepingSystem = bk_2010021201
   }
   
   # NEW: use LHCbDiracPolicy in cmt/requirements
