I prepared a new release!
git-svn-id: svn+ssh://svn.cern.ch/reps/dirac/LHCbDIRAC/trunk@21462 4525493e-7705-40b1-a816-d608a930855b

--- a/LHCbDIRAC/versions.cfg
+++ b/LHCbDIRAC/versions.cfg
@@ -4,7 +4,7 @@ Versions
 
   NextRelease
   {
-    
+    BookkeepingSystem = bk_2010021601
   }
   
   # NEW: use LHCbDiracPolicy in cmt/requirements
