--- a/LHCbDIRAC/versions.cfg
+++ b/LHCbDIRAC/versions.cfg
@@ -4,7 +4,39 @@ Versions
 
   NextRelease
   {
+
+  }
+  
+  # NEW: use LHCbDiracPolicy in cmt/requirements
+  # BUGFIX: many typos fixed after the code checker pass (R.Graciani)
+  v5r0
+  {
+    # CHANGE: Import Bookkeeping modules consistently from LHCbDIRAC package
     BookkeepingSystem = bk_2010021602
+
+    # CHANGE: Use rearranged utilities
+    ConfigurationSystem = cs_2010021601
+
+    # CHANGE: updated install_xxx.sh scripts
+    # NEW: Added OutputDataPolicy plugin
+    Core = co_2010021601
+    DataManagementSystem = dm_2010021601
+    Interfaces = if_2010021701
+
+    # CHANGE: Removed generic code to TransformationSystem(s)
+    # NEW: Agent for submit/monitor replication transformations
+    # BUGFIX: consider all production type agents
+    # NEW: LHCbDIRAC TransformationSystem is merged with the ProductionManagementSystem
+    ProductionManagementSystem = pm_2010021601
+
+    ResourceStatusSystem = rs_2010020701
+    SAMSystem = sa_2010021501
+
+    # NEW: Contains only code which references the LHCbDIRAC/BookkeepingSystem
+    TransformationSystem = tr_2010020701
+
+    Workflow = wo_2010021501
+    WorkloadManagementSystem = wm_2010012001
   }
   
   # NEW: use LHCbDiracPolicy in cmt/requirements
