--- a/LHCbDIRAC/versions.cfg
+++ b/LHCbDIRAC/versions.cfg
@@ -18,9 +18,16 @@ Versions
     ConfigurationSystem = cs_2010021601
 
     # CHANGE: updated install_xxx.sh scripts
+    # CHANGE: CombinedSoftwareInstallation moved long install_project printouts to verbose log level
     # NEW: Added OutputDataPolicy plugin
+    # NEW: Updated ProductionData to also handle new user jobs output LFN convention
     Core = co_2010021601
     DataManagementSystem = dm_2010021601
+    
+    #NEW: API now has refined error handling as implemented in the DIRAC Job / Dirac base classes
+    #NEW: Reworked the LHCbJob object to use UserJobFinalization by default
+    #CHANGE: Refined the verbosity of API for Production
+    #NEW: Production.py now automatically creates transformations for productions
     Interfaces = if_2010021701
 
     # CHANGE: Removed generic code to TransformationSystem(s)
@@ -35,7 +42,9 @@ Versions
     # NEW: Contains only code which references the LHCbDIRAC/BookkeepingSystem
     TransformationSystem = tr_2010020701
 
+    # NEW: Include tested UserJobFinalization module
     Workflow = wo_2010021501
+    
     WorkloadManagementSystem = wm_2010012001
   }
   
