--- a/LHCbDIRAC/versions.cfg
+++ b/LHCbDIRAC/versions.cfg
@@ -11,7 +11,18 @@ Versions
   # BUGFIX: many typos fixed after the code checker pass (R.Graciani)
   v5r0
   {
-    # CHANGE: Import Bookkeeping modules consistently from LHCbDIRAC package
+    # NEW: The data taking conditions description is generated automaticly.
+    # NEW: Added the VeloPosition to the data taking conditions.
+    # NEW: Implemented a bookmark functionality for Bkk. The bookmarks are stored in the server site. The web page and the standalone GUI are using the same bookmarks.
+    # NEW: Allow more than one file type,event type and production/run when we run striping or reconstruction.
+    # NEW: Added the processing pass viewer to the production. The users can see how the production processed: DDB, CONDB, optionfiles, They can easy recreate the jobs.
+    # NEW: Implemented a command line method to insert new file types to the Bkk DB.
+    # NEW: Created a new table which contains all the tags(condb,ddb). I provide tools to have access to this table.
+    # CHANGE: Bkk DB clean: The not used columns in the jobs table are removed.
+    # CHANGE: Changed the Physicstat to FullStat in the files table. The EventStat contains the physics event, the FullStat contains all the events.
+    # BUGFIX: EventinputStat was not correct counted.
+    # BUGFIX: The data taking description was not correctly created. The VeloOPEN wrong should be  VeloOpen. (cosmetics)
+    # BUGFIX: The rootPath was not correctly set. 
     BookkeepingSystem = bk_2010021602
 
     # CHANGE: Use rearranged utilities
