add SAM tag for next patch release
git-svn-id: svn+ssh://svn.cern.ch/reps/dirac/LHCbDIRAC/trunk@22012 4525493e-7705-40b1-a816-d608a930855b

--- a/LHCbDIRAC/versions.cfg
+++ b/LHCbDIRAC/versions.cfg
@@ -4,9 +4,10 @@ Versions
 
   NextRelease
   {
+    SAMSystem = sa_2010022202
 
   }
-  
+
   v5r0p1
   {
     BookkeepingSystem = bk_2010021602
@@ -22,10 +23,10 @@ Versions
     # NEW: GaudiApplication - support for single-step stripping
     # CHANGE: GaudiApplicationScript - Move stdout printing in line with GaudiApplication module
     Workflow = wo_2010021901
-    
+
     WorkloadManagementSystem = wm_2010012001
   }
-  
+
   # NEW: use LHCbDiracPolicy in cmt/requirements
   # BUGFIX: many typos fixed after the code checker pass (R.Graciani)
   v5r0
@@ -41,7 +42,7 @@ Versions
     # CHANGE: Changed the Physicstat to FullStat in the files table. The EventStat contains the physics event, the FullStat contains all the events.
     # BUGFIX: EventinputStat was not correct counted.
     # BUGFIX: The data taking description was not correctly created. The VeloOPEN wrong should be  VeloOpen. (cosmetics)
-    # BUGFIX: The rootPath was not correctly set. 
+    # BUGFIX: The rootPath was not correctly set.
     BookkeepingSystem = bk_2010021602
 
     # CHANGE: Use rearranged utilities
@@ -53,7 +54,7 @@ Versions
     # NEW: Updated ProductionData to also handle new user jobs output LFN convention
     Core = co_2010021701
     DataManagementSystem = dm_2010021601
-    
+
     #NEW: API now has refined error handling as implemented in the DIRAC Job / Dirac base classes
     #NEW: Reworked the LHCbJob object to use UserJobFinalization by default
     #CHANGE: Refined the verbosity of API for Production
@@ -71,7 +72,7 @@ Versions
 
     # NEW: Include tested UserJobFinalization module
     Workflow = wo_2010021701
-    
+
     WorkloadManagementSystem = wm_2010012001
   }
 }
