--- a/LHCbDIRAC/versions.cfg
+++ b/LHCbDIRAC/versions.cfg
@@ -7,6 +7,24 @@ Versions
     SAMSystem = sa_2010022202
 
   }
+  
+  v5r0p2
+  {
+  
+    # CHANGE: Fix in the info serving to the Web Interface
+    BookkeepingSystem = bk_2010022201
+    ConfigurationSystem = cs_2010021601
+    Core = co_2010021701
+    DataManagementSystem = dm_2010021601
+    Interfaces = if_2010021701
+    ProductionManagementSystem = pm_2010021701
+    ResourceStatusSystem = rs_2010020701
+    
+    # CHANGE: Disable report if software is installed
+    SAMSystem = sa_2010022202
+    Workflow = wo_2010021901
+    WorkloadManagementSystem = wm_2010012001
+  }
 
   v5r0p1
   {
