--- a/LHCbDIRAC/versions.cfg
+++ b/LHCbDIRAC/versions.cfg
@@ -4,7 +4,8 @@ Versions
 
   NextRelease
   {
-
+    # BUGFIX: I clean the files from  File dialog window when the user click the close ot X button. 
+    BookkeepingSystem = bk_201002501
   }
   
   v5r0p2
