I implemented a method which returns all the available condition tags
git-svn-id: svn+ssh://svn.cern.ch/reps/dirac/LHCbDIRAC/trunk@22142 4525493e-7705-40b1-a816-d608a930855b

--- a/LHCbDIRAC/versions.cfg
+++ b/LHCbDIRAC/versions.cfg
@@ -4,8 +4,9 @@ Versions
 
   NextRelease
   {
+    # NEW I implemented a method which returns all the available condition tags
     # BUGFIX: I clean the files from  File dialog window when the user click the close ot X button. 
-    BookkeepingSystem = bk_201002501
+    BookkeepingSystem = bk_2010022601
   }
   
   v5r0p2
