--- a/LHCbDIRAC/versions.cfg
+++ b/LHCbDIRAC/versions.cfg
@@ -4,9 +4,12 @@ Versions
 
   NextRelease
   {
+    
+    # I provide a method which returns back the processed events for a given production.
     # NEW I implemented a method which returns all the available condition tags
-    # BUGFIX: I clean the files from  File dialog window when the user click the close ot X button. 
-    BookkeepingSystem = bk_2010022601
+    # BUGFIX: I clean the files from  File dialog window when the user click the close ot X button.
+    # CHANGE: I changed the getFilesWithGivenDataSets method I added NbOfEvents flag to return back the number of events for a given dataset.
+    BookkeepingSystem = bk_2010030101
   }
   
   v5r0p2
