--- a/LHCbDIRAC/versions.cfg
+++ b/LHCbDIRAC/versions.cfg
@@ -10,6 +10,11 @@ Versions
     # BUGFIX: I clean the files from  File dialog window when the user click the close ot X button.
     # CHANGE: I changed the getFilesWithGivenDataSets method I added NbOfEvents flag to return back the number of events for a given dataset.
     BookkeepingSystem = bk_2010030101
+    # BUGFIX: Several
+    DataManagementSystem = dm_2010030101
+    # NEW: RAWShares plugin to distribute runs atomically (agent)
+    # NEW: Consider replication transformations in StatusAgent 
+    ProductionManagementSystem = pm_2010030101
   }
   
   v5r0p2
