--- a/LHCbDIRAC/versions.cfg
+++ b/LHCbDIRAC/versions.cfg
@@ -14,7 +14,9 @@ Versions
     DataManagementSystem = dm_2010030101
     # NEW: RAWShares plugin to distribute runs atomically (agent)
     # NEW: Consider replication transformations in StatusAgent 
-    ProductionManagementSystem = pm_2010030101
+    # NEW: Lists in the BK query
+    # NEW: Plugins for grouping by file and event type
+    ProductionManagementSystem = pm_2010030301
   }
   
   v5r0p2
