# BUGFIX: Introduced a sleep to UserJobFinalization to allow replication of recently uploaded files     Workflow = wo_2010030301     # NEW: Introduced support for protocol access tests     Interfaces = if_2010030301     # NEW: Introduced support for protocol access tests     Core = co_2010030301
git-svn-id: svn+ssh://svn.cern.ch/reps/dirac/LHCbDIRAC/trunk@22245 4525493e-7705-40b1-a816-d608a930855b

--- a/LHCbDIRAC/versions.cfg
+++ b/LHCbDIRAC/versions.cfg
@@ -17,6 +17,12 @@ Versions
     # NEW: Lists in the BK query
     # NEW: Plugins for grouping by file and event type
     ProductionManagementSystem = pm_2010030301
+    # BUGFIX: Introduced a sleep to UserJobFinalization to allow replication of recently uploaded files
+    Workflow = wo_2010030301
+    # NEW: Introduced support for protocol access tests
+    Interfaces = if_2010030301
+    # NEW: Introduced support for protocol access tests
+    Core = co_2010030301
   }
   
   v5r0p2
