--- a/LHCbDIRAC/versions.cfg
+++ b/LHCbDIRAC/versions.cfg
@@ -7,7 +7,7 @@ Versions
 
   }
   
-  v5r1-pre1
+  v5r1-pre2
   {
   
     # NEW: Method which returns back the processed events for a given production.
@@ -29,6 +29,46 @@ Versions
     # CHANGE: Better support for ROOT 
     # NEW: LHCbJob - support for Protocol access tests
     Interfaces = if_2010030901
+    
+    # NEW: RAWShares plugin to distribute runs atomically (agent)
+    # NEW: Consider replication transformations in StatusAgent 
+    # NEW: Lists in the BK query
+    # NEW: Plugins for grouping by file and event type
+    ProductionManagementSystem = pm_2010030802
+    
+    # BUGFIX: Introduced a sleep to UserJobFinalization to allow replication of recently uploaded files
+    Workflow = wo_2010030301
+    
+    ResourceStatusSystem = rs_2010020701
+    
+    # CHANGE: Disable report if software is installed
+    SAMSystem = sa_2010022202
+    
+    WorkloadManagementSystem = wm_2010012001
+  }
+  
+  v5r1-pre1
+  {
+  
+    # NEW: Method which returns back the processed events for a given production.
+    # NEW: Method which returns all the available condition tags
+    # BUGFIX: Cleaning the files from  File dialog window when the user click the close ot X button.
+    # CHANGE: Changed the getFilesWithGivenDataSets method I added NbOfEvents flag to return back the number of events for a given dataset.
+    BookkeepingSystem = bk_2010030101
+    
+    # CHANGE: CE2CSAgent moved to DIRAC package
+    ConfigurationSystem = cs_2010030501
+    
+    # CHANGE: updated dirac-architecture
+    # NEW: Introduced support for protocol access tests
+    Core = co_2010030501
+    
+    # BUGFIX: Several
+    DataManagementSystem = dm_2010030101
+    
+    # CHANGE: Better support for ROOT 
+    # NEW: LHCbJob - support for Protocol access tests
+    Interfaces = if_2010030501
     
     # NEW: RAWShares plugin to distribute runs atomically (agent)
     # NEW: Consider replication transformations in StatusAgent 
