--- a/LHCbDIRAC/versions.cfg
+++ b/LHCbDIRAC/versions.cfg
@@ -4,7 +4,9 @@ Versions
 
   NextRelease
   {
-
+   # BUGFIX: When you want to save the files in the File dialog window, the I just save the selected files.
+   # BUGFIX: I am not exist when the tags exist in the DB.
+   BookkeepingSystem = bk_2010030101
   }
   
   v5r1-pre2
