Added latest interfaces tag.
git-svn-id: svn+ssh://svn.cern.ch/reps/dirac/LHCbDIRAC/trunk@22662 4525493e-7705-40b1-a816-d608a930855b

--- a/LHCbDIRAC/versions.cfg
+++ b/LHCbDIRAC/versions.cfg
@@ -30,7 +30,9 @@ Versions
     
     # CHANGE: Better support for ROOT 
     # NEW: LHCbJob - support for Protocol access tests
-    Interfaces = if_2010030901
+    # NEW: DiracLHCb - getSoftwareVersions() method to retrieve the list of software names, versions and supported system configurations 
+    # NEW: DiracLHCb - Added BK query methods either using arguments to a function or passing a dictionary.  A minimal set of fields is required to prevent overloading of the service. 
+    Interfaces = if_2010031001
     
     # NEW: RAWShares plugin to distribute runs atomically (agent)
     # NEW: Consider replication transformations in StatusAgent 
