--- a/LHCbDIRAC/versions.cfg
+++ b/LHCbDIRAC/versions.cfg
@@ -23,6 +23,7 @@ Versions
     
     # CHANGE: updated dirac-architecture
     # NEW: Introduced support for protocol access tests
+    # NEW: DiracLHCb - added methods to retrieve software versions for ROOT and applications
     Core = co_2010031001
     
     # BUGFIX: Several
