--- a/LHCbDIRAC/versions.cfg
+++ b/LHCbDIRAC/versions.cfg
@@ -7,6 +7,51 @@ Versions
    
   }
   
+  v5r1-pre4
+  {
+  
+    # NEW: Method which returns back the processed events for a given production.
+    # NEW: Method which returns all the available condition tags
+    # BUGFIX: Cleaning the files from  File dialog window when the user click the close ot X button.
+    # CHANGE: Changed the getFilesWithGivenDataSets method I added NbOfEvents flag to return back the number of events for a given dataset.
+    # BUGFIX: When you want to save the files in the File dialog window, the I just save the selected files.
+    # BUGFIX: I am not exist when the tags exist in the DB.
+    BookkeepingSystem = bk_2010031001
+    
+    # CHANGE: CE2CSAgent moved to DIRAC package
+    ConfigurationSystem = cs_2010030501
+    
+    # CHANGE: updated dirac-architecture
+    # NEW: Introduced support for protocol access tests
+    # NEW: DiracLHCb - added methods to retrieve software versions for ROOT and applications
+    Core = co_2010031101
+    
+    # BUGFIX: Several
+    DataManagementSystem = dm_2010031101
+    
+    # CHANGE: Better support for ROOT 
+    # NEW: LHCbJob - support for Protocol access tests
+    # NEW: DiracLHCb - getSoftwareVersions() method to retrieve the list of software names, versions and supported system configurations 
+    # NEW: DiracLHCb - Added BK query methods either using arguments to a function or passing a dictionary.  A minimal set of fields is required to prevent overloading of the service. 
+    Interfaces = if_2010031001
+    
+    # NEW: RAWShares plugin to distribute runs atomically (agent)
+    # NEW: Consider replication transformations in StatusAgent 
+    # NEW: Lists in the BK query
+    # NEW: Plugins for grouping by file and event type
+    ProductionManagementSystem = pm_2010030802
+    
+    # BUGFIX: Introduced a sleep to UserJobFinalization to allow replication of recently uploaded files
+    Workflow = wo_2010030301
+    
+    ResourceStatusSystem = rs_2010020701
+    
+    # CHANGE: Disable report if software is installed
+    SAMSystem = sa_2010022202
+    
+    WorkloadManagementSystem = wm_2010012001
+  }
+  
   v5r1-pre3
   {
   
