--- a/LHCbDIRAC/versions.cfg
+++ b/LHCbDIRAC/versions.cfg
@@ -2,9 +2,20 @@
 Versions
 {
 
-  NextRelease
+  Next Release
   {
+    #CHANGE: ClientTools.py - Updated to use ProductionEnvironment.py utility. 
+    #NEW: ProductionEnvironment.py - All LbLogin / SetupProject operations can be performed in one place by one utility.
+    Core = co_2010031801
 
+    #NEW: DiracLHCb.py - Added passthrough for getAncestors call, this was being imported separately by Ganga but no longer has to be. 
+    #NEW: DiracLHCb.py - Added bkQueryPath() method to allow queries such as "/LHCb/Collision09/Beam450GeV-VeloOpen-MagDown/Real Data + RecoToDST-07/90000000/DST".
+    #NEW: Production.py - Added 'Test' as a possible production type, removed checks on plugin names, added support for all BK file types for transformations created for productions with 'ByFileType' plugin.
+    Interfaces = if_2010031801
+
+    #CHANGE: GaudiApplication.py / BookkeepingReport.py - Update to include the stream file sizes as the files are produced rather than relying on a merging step.
+    #CHANGE: GaudiApplication.py / GaudiApplicationScript.py / ErrorLogging.py - Updated to use ProductionEnvironment.py utility.
+    Workflow = wo_2010031801
   }
 
   v5r1
