--- a/LHCbDIRAC/versions.cfg
+++ b/LHCbDIRAC/versions.cfg
@@ -10,6 +10,7 @@ Versions
   v5r2-pre2
   {
 
+    # BUGFIX: OracleBookkeeingDB.py - the event type can be a list, tuple, int or long type
     BookkeepingSystem = bk_2010031001
     ConfigurationSystem = cs_2010030501
 
