--- a/LHCbDIRAC/versions.cfg
+++ b/LHCbDIRAC/versions.cfg
@@ -7,6 +7,36 @@ Versions
     
   }
   
+  v5r2
+  {
+
+    # BUGFIX: OracleBookkeeingDB.py - the event type can be a list, tuple, int or long type
+    BookkeepingSystem = bk_2010031001
+    ConfigurationSystem = cs_2010030501
+
+    # CHANGE: ClientTools.py - Updated to use ProductionEnvironment.py utility. 
+    # NEW: ProductionEnvironment.py - All LbLogin / SetupProject operations can be performed in one place by one utility.
+    Core = co_2010031801
+
+    DataManagementSystem = dm_2010031101
+
+    # NEW: DiracLHCb.py - Added passthrough for getAncestors call, this was being imported separately by Ganga but no longer has to be. 
+    # NEW: DiracLHCb.py - Added bkQueryPath() method to allow queries such as "/LHCb/Collision09/Beam450GeV-VeloOpen-MagDown/Real Data + RecoToDST-07/90000000/DST".
+    # NEW: Production.py - Added 'Test' as a possible production type, removed checks on plugin names, added support for all BK file types for transformations created for productions with 'ByFileType' plugin.
+    Interfaces = if_2010031901
+
+    ProductionManagementSystem = pm_2010031101
+
+    # CHANGE: GaudiApplication.py / BookkeepingReport.py - Update to include the stream file sizes as the files are produced rather than relying on a merging step.
+    # CHANGE: GaudiApplication.py / GaudiApplicationScript.py / ErrorLogging.py - Updated to use ProductionEnvironment.py utility.
+    # CHANGE: AnalyseLogFile.py: allow Brunel to write out a number of events different to the total number of processed events 
+    Workflow = wo_2010031901
+
+    ResourceStatusSystem = rs_2010020701
+    SAMSystem = sa_2010031901
+    WorkloadManagementSystem = wm_2010012001
+  }
+  
   v5r2-pre2
   {
 
