--- a/LHCbDIRAC/versions.cfg
+++ b/LHCbDIRAC/versions.cfg
@@ -7,6 +7,22 @@ Versions
     
   }
   
+  v5r2p1
+  {
+
+    ConfigurationSystem = cs_2010030501
+    
+    # BUGFIX: ProductionEnvironment.py - fix for the environment of user jobs with shipped components.
+    Core = co_2010031901
+    DataManagementSystem = dm_2010031101
+    Interfaces = if_2010031901
+    ProductionManagementSystem = pm_2010031101
+    Workflow = wo_2010031901
+    ResourceStatusSystem = rs_2010020701
+    SAMSystem = sa_2010031901
+    WorkloadManagementSystem = wm_2010012001
+  }
+  
   v5r2
   {
 
