--- a/LHCbDIRAC/versions.cfg
+++ b/LHCbDIRAC/versions.cfg
@@ -4,7 +4,8 @@ Versions
 
   Next Release
   {
-    
+   # CHANGE: I changed back the widget colors and I allow to insert files with 0 eventnb.
+   BookkeepingSystem = bk_2010032501
   }
   
   v5r2p1
