Next patch release.
git-svn-id: svn+ssh://svn.cern.ch/reps/dirac/LHCbDIRAC/trunk@23649 4525493e-7705-40b1-a816-d608a930855b

--- a/LHCbDIRAC/versions.cfg
+++ b/LHCbDIRAC/versions.cfg
@@ -6,6 +6,12 @@ Versions
   {
    # CHANGE: I changed back the widget colors and I allow to insert files with 0 eventnb.
    BookkeepingSystem = bk_2010032501
+   
+   # CHANGE: GaudiApplication.py - updated to allow data reconstruction jobs to stream files  
+   Workflow = wo_2010032501      
+
+   # CHANGE: Use new List utility method, added ByRun plugin for streams
+   Interfaces = if_2010032501
   }
   
   v5r2p1
