--- a/LHCbDIRAC/versions.cfg
+++ b/LHCbDIRAC/versions.cfg
@@ -4,14 +4,29 @@ Versions
 
   Next Release
   {
-   # CHANGE: I changed back the widget colors and I allow to insert files with 0 eventnb.
-   BookkeepingSystem = bk_2010032501
-   
-   # CHANGE: GaudiApplication.py - updated to allow data reconstruction jobs to stream files  
-   Workflow = wo_2010032501      
 
-   # CHANGE: Use new List utility method, added ByRun plugin for streams
-   Interfaces = if_2010032501
+  }
+  
+  v5r2p2
+  {
+    
+    # CHANGE: Changed widget colors
+    # CHANGE: Allow to insert files with 0 events number
+    BookkeepingSystem = bk_2010032501
+    
+    ConfigurationSystem = cs_2010030501    
+    Core = co_2010031901
+    DataManagementSystem = dm_2010031101
+    
+    # CHANGE: Use new List utility method, added ByRun plugin for streams
+    Interfaces = if_2010032501
+    ProductionManagementSystem = pm_2010031101
+    
+    # CHANGE: GaudiApplication.py - updated to allow data reconstruction jobs to stream files  
+    Workflow = wo_2010032501
+    ResourceStatusSystem = rs_2010020701
+    SAMSystem = sa_2010031901
+    WorkloadManagementSystem = wm_2010012001
   }
   
   v5r2p1
