--- a/LHCbDIRAC/versions.cfg
+++ b/LHCbDIRAC/versions.cfg
@@ -7,6 +7,24 @@ Versions
 
   }
   
+  v5r2p4
+  {
+    
+    BookkeepingSystem = bk_2010032501
+    ConfigurationSystem = cs_2010030501 
+    Core = co_2010033001
+    DataManagementSystem = dm_2010031101
+    
+    # CHANGE: Minor fixes to support the stream replication transformations
+    Interfaces = if_2010033001
+    
+    ProductionManagementSystem = pm_2010031101
+    Workflow = wo_2010032501
+    ResourceStatusSystem = rs_2010020701
+    SAMSystem = sa_2010031901
+    WorkloadManagementSystem = wm_2010012001
+  }
+  
   v5r2p3
   {
     
