--- a/LHCbDIRAC/versions.cfg
+++ b/LHCbDIRAC/versions.cfg
@@ -7,6 +7,25 @@ Versions
 
   }
   
+  v5r2p5
+  {
+    
+    BookkeepingSystem = bk_2010032501
+    ConfigurationSystem = cs_2010030501 
+    Core = co_2010033001
+    DataManagementSystem = dm_2010031101
+    Interfaces = if_2010033001
+
+    # BUGFIX: RAWShares plugin fixed
+    # BUGFIX: ProductionRequest - fixed the case of the user property option    
+    ProductionManagementSystem = pm_2010033101
+    
+    Workflow = wo_2010032501
+    ResourceStatusSystem = rs_2010020701
+    SAMSystem = sa_2010031901
+    WorkloadManagementSystem = wm_2010012001
+  }
+  
   v5r2p4
   {
     
