git-svn-id: svn+ssh://svn.cern.ch/reps/dirac/LHCbDIRAC/trunk@23889 4525493e-7705-40b1-a816-d608a930855b

--- a/LHCbDIRAC/versions.cfg
+++ b/LHCbDIRAC/versions.cfg
@@ -4,7 +4,10 @@ Versions
 
   Next Release
   {
-
+   # BUGFIX: The option file creation failed because the file size was 0.
+   # BUGFIX: I fixed the production information command line. I changed the None to event type.
+   # BUGFIX: I fixed the file dialog window problem in MAC.
+   # NEW: I also added the file type to the CS.
   }
   
   v5r2p5
