--- a/LHCbDIRAC/versions.cfg
+++ b/LHCbDIRAC/versions.cfg
@@ -4,10 +4,27 @@ Versions
 
   Next Release
   {
-   # BUGFIX: The option file creation failed because the file size was 0.
-   # BUGFIX: I fixed the production information command line. I changed the None to event type.
-   # BUGFIX: I fixed the file dialog window problem in MAC.
-   # NEW: I also added the file type to the CS.
+ 
+  }
+  
+  v5r2p6
+  {
+   
+    # BUGFIX: The option file creation failed because the file size was 0.
+    # BUGFIX: Fixed the production information command line. I changed the None to event type.
+    # BUGFIX: Fixed the file dialog window problem in MAC.
+    # NEW: Added the file type to the CS. 
+    BookkeepingSystem = bk_2010033101
+    
+    ConfigurationSystem = cs_2010030501 
+    Core = co_2010033001
+    DataManagementSystem = dm_2010031101
+    Interfaces = if_2010033001    
+    ProductionManagementSystem = pm_2010033101
+    Workflow = wo_2010032501
+    ResourceStatusSystem = rs_2010020701
+    SAMSystem = sa_2010031901
+    WorkloadManagementSystem = wm_2010012001
   }
   
   v5r2p5
