I added the eventtypeid to the histo files.
git-svn-id: svn+ssh://svn.cern.ch/reps/dirac/LHCbDIRAC/trunk@23901 4525493e-7705-40b1-a816-d608a930855b

--- a/LHCbDIRAC/versions.cfg
+++ b/LHCbDIRAC/versions.cfg
@@ -4,7 +4,8 @@ Versions
 
   Next Release
   {
- 
+    # BUGFIX: I propagate the eventtypeId when the files are HISTO files.
+     BookkeepingSystem = bk_2010033102
   }
   
   v5r2p6
