--- a/LHCbDIRAC/versions.cfg
+++ b/LHCbDIRAC/versions.cfg
@@ -4,8 +4,7 @@ Versions
 
   Next Release
   {
-    # BUGFIX: I propagate the eventtypeId when the files are HISTO files.
-     BookkeepingSystem = bk_2010033102
+
   }
   
   v5r2p6
@@ -15,7 +14,8 @@ Versions
     # BUGFIX: Fixed the production information command line. I changed the None to event type.
     # BUGFIX: Fixed the file dialog window problem in MAC.
     # NEW: Added the file type to the CS. 
-    BookkeepingSystem = bk_2010033101
+    # BUGFIX: Propagate the eventtypeId when the files are HISTO files.
+    BookkeepingSystem = bk_2010033102
     
     ConfigurationSystem = cs_2010030501 
     Core = co_2010033001
