# BUGFIX: When the users want to see a limited number of real data files in the GUI or the web page the getLimitedfiles method return 0 files.
git-svn-id: svn+ssh://svn.cern.ch/reps/dirac/LHCbDIRAC/trunk@23938 4525493e-7705-40b1-a816-d608a930855b

--- a/LHCbDIRAC/versions.cfg
+++ b/LHCbDIRAC/versions.cfg
@@ -4,7 +4,8 @@ Versions
 
   Next Release
   {
-
+   # BUGFIX: When the users want to see a limited number of real data files in the GUI or the web page the getLimitedfiles method return 0 files.
+   BookkeepingSystem = bk_2010033103
   }
   
   v5r2p6
