--- a/LHCbDIRAC/versions.cfg
+++ b/LHCbDIRAC/versions.cfg
@@ -4,8 +4,25 @@ Versions
 
   Next Release
   {
-   # BUGFIX: When the users want to see a limited number of real data files in the GUI or the web page the getLimitedfiles method return 0 files.
-   BookkeepingSystem = bk_2010033103
+
+  }
+  
+  v5r2p7
+  {
+   
+    # BUGFIX: When the users want to see a limited number of real data files in the GUI or the 
+    # web page the getLimitedfiles method return 0 files.
+    BookkeepingSystem = bk_2010033103
+    
+    ConfigurationSystem = cs_2010030501 
+    Core = co_2010033001
+    DataManagementSystem = dm_2010031101
+    Interfaces = if_2010033001    
+    ProductionManagementSystem = pm_2010033101
+    Workflow = wo_2010032501
+    ResourceStatusSystem = rs_2010020701
+    SAMSystem = sa_2010031901
+    WorkloadManagementSystem = wm_2010012001
   }
   
   v5r2p6
