--- a/LHCbDIRAC/versions.cfg
+++ b/LHCbDIRAC/versions.cfg
@@ -7,6 +7,27 @@ Versions
 
   }
   
+  v5r2p8
+  {
+   
+    BookkeepingSystem = bk_2010033103
+    ConfigurationSystem = cs_2010030501 
+    
+    # CHANGE: Added workaround for the CORAL LFC access problem
+    Core = co_2010040701
+    
+    DataManagementSystem = dm_2010031101
+    Interfaces = if_2010033001    
+    ProductionManagementSystem = pm_2010033101
+    
+    # CHANGE: GaudiApplication - CORAL workaround moved to ProductionEnvironment module
+    Workflow = wo_2010040701
+    
+    ResourceStatusSystem = rs_2010020701
+    SAMSystem = sa_2010031901
+    WorkloadManagementSystem = wm_2010012001
+  }
+  
   v5r2p7
   {
    
