# NEW: I return the runs which are processed or not processed with a given date.
git-svn-id: svn+ssh://svn.cern.ch/reps/dirac/LHCbDIRAC/trunk@24135 4525493e-7705-40b1-a816-d608a930855b

--- a/LHCbDIRAC/versions.cfg
+++ b/LHCbDIRAC/versions.cfg
@@ -4,7 +4,8 @@ Versions
 
   Next Release
   {
-
+    # NEW: I return the runs which are processed or not processed with a given date.
+    BookkeepingSystem = bk_2010040901
   }
   
   v5r2p8
