I added the Joel modification into the release.
git-svn-id: svn+ssh://svn.cern.ch/reps/dirac/LHCbDIRAC/trunk@24149 4525493e-7705-40b1-a816-d608a930855b

--- a/LHCbDIRAC/versions.cfg
+++ b/LHCbDIRAC/versions.cfg
@@ -4,8 +4,9 @@ Versions
 
   Next Release
   {
+    # BUGFIX: I added the Joel modification into the release.
     # NEW: I return the runs which are processed or not processed with a given date.
-    BookkeepingSystem = bk_2010040901
+    BookkeepingSystem = bk_2010041201
   }
   
   v5r2p8
