--- a/LHCbDIRAC/versions.cfg
+++ b/LHCbDIRAC/versions.cfg
@@ -7,6 +7,8 @@ Versions
     # BUGFIX: I added the Joel modification into the release.
     # NEW: I return the runs which are processed or not processed with a given date.
     BookkeepingSystem = bk_2010041201
+    #BUGFIX: DiracProduction.py - Minor change to fix command line production file summaries.
+    ProductionManagementSystem = pm_2010041501    
   }
   
   v5r2p8
@@ -28,6 +30,9 @@ Versions
     ResourceStatusSystem = rs_2010020701
     SAMSystem = sa_2010031901
     WorkloadManagementSystem = wm_2010012001
+    #BUGFIX: DiracProduction.py - Minor change to fix command line production file summaries.
+    ProductionManagementSystem = pm_2010041501
+
   }
   
   v5r2p7
