--- a/LHCbDIRAC/versions.cfg
+++ b/LHCbDIRAC/versions.cfg
@@ -8,7 +8,8 @@ Versions
     # NEW: I return the runs which are processed or not processed with a given date.
     BookkeepingSystem = bk_2010041201
     #BUGFIX: DiracProduction.py - Minor change to fix command line production file summaries.
-    ProductionManagementSystem = pm_2010041501    
+    #BUGFIX: DataRecoveryAgent.py - Protect against case where prod job has no WMS ID assigned.
+    ProductionManagementSystem = pm_2010041601
   }
   
   v5r2p8
