--- a/LHCbDIRAC/versions.cfg
+++ b/LHCbDIRAC/versions.cfg
@@ -9,7 +9,9 @@ Versions
     BookkeepingSystem = bk_2010041201
     #BUGFIX: DiracProduction.py - Minor change to fix command line production file summaries.
     #BUGFIX: DataRecoveryAgent.py - Protect against case where prod job has no WMS ID assigned.
-    ProductionManagementSystem = pm_2010041601
+    ProductionManagementSystem = pm_2010041601    
+    #BUGFIX: TestApplications.py - Fix for preserving stdout in case of failure as reported by Vladimir.
+    SAMSystem = sa_2010041901    
   }
   
   v5r2p8
