Add new Core and SAMSystem tags for next release.
git-svn-id: svn+ssh://svn.cern.ch/reps/dirac/LHCbDIRAC/trunk@24235 4525493e-7705-40b1-a816-d608a930855b

--- a/LHCbDIRAC/versions.cfg
+++ b/LHCbDIRAC/versions.cfg
@@ -11,7 +11,10 @@ Versions
     #BUGFIX: DataRecoveryAgent.py - Protect against case where prod job has no WMS ID assigned.
     ProductionManagementSystem = pm_2010041601    
     #BUGFIX: TestApplications.py - Fix for preserving stdout in case of failure as reported by Vladimir.
-    SAMSystem = sa_2010041901    
+    #CHANGE: SoftwareInstallation.py - Force flush of stdout and protect against exceptions during redirection.
+    SAMSystem = sa_2010041902
+    #NEW: ProductionOptions.py - Make Brunel print a line per 100 events instead of every event by default.
+    Core = co_2010041901
   }
   
   v5r2p8
