--- a/LHCbDIRAC/versions.cfg
+++ b/LHCbDIRAC/versions.cfg
@@ -15,6 +15,8 @@ Versions
     SAMSystem = sa_2010041902
     #NEW: ProductionOptions.py - Make Brunel print a line per 100 events instead of every event by default.
     Core = co_2010041901
+    #NEW: DiracLHCb.py - BK query methods now accept data quality flags with appropriate checking.
+    Interfaces = if_2010042101        
   }
   
   v5r2p8
