git-svn-id: svn+ssh://svn.cern.ch/reps/dirac/LHCbDIRAC/trunk@24276 4525493e-7705-40b1-a816-d608a930855b

--- a/LHCbDIRAC/versions.cfg
+++ b/LHCbDIRAC/versions.cfg
@@ -5,8 +5,11 @@ Versions
   Next Release
   {
     # BUGFIX: I added the Joel modification into the release.
+    #The command line has to show the fill number only for runs.
+    #The run information has to be show all the streams.
     # NEW: I return the runs which are processed or not processed with a given date.
-    BookkeepingSystem = bk_2010041201
+    BookkeepingSystem = bk_2010041501
+    
     #BUGFIX: DiracProduction.py - Minor change to fix command line production file summaries.
     #BUGFIX: DataRecoveryAgent.py - Protect against case where prod job has no WMS ID assigned.
     ProductionManagementSystem = pm_2010041601    
