Updated Core tag.
git-svn-id: svn+ssh://svn.cern.ch/reps/dirac/LHCbDIRAC/trunk@24288 4525493e-7705-40b1-a816-d608a930855b

--- a/LHCbDIRAC/versions.cfg
+++ b/LHCbDIRAC/versions.cfg
@@ -9,7 +9,6 @@ Versions
     #The run information has to be show all the streams.
     # NEW: I return the runs which are processed or not processed with a given date.
     BookkeepingSystem = bk_2010041501
-    
     #BUGFIX: DiracProduction.py - Minor change to fix command line production file summaries.
     #BUGFIX: DataRecoveryAgent.py - Protect against case where prod job has no WMS ID assigned.
     ProductionManagementSystem = pm_2010041601    
@@ -17,9 +16,11 @@ Versions
     #CHANGE: SoftwareInstallation.py - Force flush of stdout and protect against exceptions during redirection.
     SAMSystem = sa_2010041902
     #NEW: ProductionOptions.py - Make Brunel print a line per 100 events instead of every event by default.
-    Core = co_2010041901
+    #BUGFIX: ProductionEnvironment.py - Stop exception for case where shared area does not exist.     
+    Core = co_2010042301
     #NEW: DiracLHCb.py - BK query methods now accept data quality flags with appropriate checking.
     Interfaces = if_2010042101        
+    
   }
   
   v5r2p8
