LHCbDIRAC/ProductionManagementSystem/pm_2010042601
git-svn-id: svn+ssh://svn.cern.ch/reps/dirac/LHCbDIRAC/trunk@24313 4525493e-7705-40b1-a816-d608a930855b

--- a/LHCbDIRAC/versions.cfg
+++ b/LHCbDIRAC/versions.cfg
@@ -10,8 +10,8 @@ Versions
     # NEW: I return the runs which are processed or not processed with a given date.
     BookkeepingSystem = bk_2010041501
     #BUGFIX: DiracProduction.py - Minor change to fix command line production file summaries.
-    #BUGFIX: DataRecoveryAgent.py - Protect against case where prod job has no WMS ID assigned.
-    ProductionManagementSystem = pm_2010041601    
+    #BUGFIX: DataRecoveryAgent.py - Protect against case where prod job has no WMS ID assigned and improved print statements.
+    ProductionManagementSystem = pm_2010042601
     #BUGFIX: TestApplications.py - Fix for preserving stdout in case of failure as reported by Vladimir.
     #CHANGE: SoftwareInstallation.py - Force flush of stdout and protect against exceptions during redirection.
     SAMSystem = sa_2010041902
